feat(voice): add smart TTS/STT sequencing and bluetooth support
- Add audio_session for audio routing and bluetooth support
- Implement concurrency lock to prevent TTS/STT overlap
- Add 1s silence guard to prevent mic picking up TTS echo
- Simplify speak() to single-pass with natural punctuation pauses
- Remove on-device STT constraint to fix language_unavailable error
- Add BLUETOOTH_CONNECT permission to AndroidManifest
- Merge duplicate normalizeCommand methods in VoiceUtils
- Restore normalizeEmail helper

--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   connectivity_plus: ^6.1.1
   google_generative_ai: ^0.4.6
   device_info_plus: ^11.2.1
+  audio_session: ^0.1.21
 
 dev_dependencies:
   flutter_test:
